# ECE252-Lab-materials

lab1/starter/: CMakeLists.txt
lab1/starter/cmd_arg/: CMakeLists.txt
lab1/starter/ls/: CMakeLists.txt
lab1/starter/png_util/: CMakeLists.txt
lab1/starter/pointer/: CMakeLists.txt
lab1/starter/segfault/: CMakeLists.txt
lab2/starter/: CMakeLists.txt
lab2/starter/cURL/: CMakeLists.txt
lab2/starter/fn_ptr/: CMakeLists.txt
lab2/starter/getopt/: CMakeLists.txt
lab2/starter/pthreads/: CMakeLists.txt
lab2/starter/times/: CMakeLists.txt
